[project]
name = "abundance2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.15.0",
    "fastapi>=0.138.0",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pyflakes>=3.4.0",
]
